--- a/style.css
+++ b/style.css
@@ -28,10 +28,23 @@ body > div {
     }
   }
   
-  li {
+ul li {
     display: flex;
     align-items: center;
     justify-content: center;
     margin-bottom: 20px;
   }
   
+
+
+h1{
+    color: red;
+}
+ol li{
+    font-size: 20px;
+    color: red;
+}
+ol ::marker{
+    color: blue;
+    content: "test test >> ";
+}
